--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>GreenScape Landscaping</title>
-<link rel="stylesheet" href="css.css">
+display: flex;
+flex-direction: column;
+gap: 20px;
+}
+.service-card {
+background: #fff;
+padding: 20px;
+border-radius: 10px;
+box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+}
+footer {
+background: #1b5e20;
+color: #fff;
+}
+</style>
 </head>
 <body>
 <header>
@@ -22,8 +31,6 @@
 
 <section id="home" class="hero">
 <h2>Your Dream Landscape Starts Here</h2>
-<p>Professional landscaping services to enhance your outdoor space.</p>
-<a href="#contact" class="btn">Get a Quote</a>
 </section>
 
 
@@ -54,12 +61,8 @@
 
 <section id="contact" class="contact-section">
 <h2>Contact Us</h2>
-<form>
-<input type="text" placeholder="Your Name" required>
-<input type="email" placeholder="Your Email" required>
-<textarea placeholder="Your Message" required></textarea>
-<button type="submit">Send Message</button>
-</form>
+<p>Email: youremail@domain.com</p>
+<p>Phone: (123) 456-7890</p>
 </section>
 
 
