--- a/index.html
+++ b/index.html
@@ -1,73 +1,65 @@
 <!DOCTYPE html>
-display: flex;
-flex-direction: column;
-gap: 20px;
-}
-.service-card {
-background: #fff;
-padding: 20px;
-border-radius: 10px;
-box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-}
-footer {
-background: #1b5e20;
-color: #fff;
-}
-</style>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GreenScape Landscaping</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
 <header>
-<h1>GreenScape Landscaping</h1>
-<nav>
-<ul>
-<li><a href="#home">Home</a></li>
-<li><a href="#services">Services</a></li>
-<li><a href="#about">About Us</a></li>
-<li><a href="#contact">Contact</a></li>
-</ul>
-</nav>
+    <h1>GreenScape Landscaping</h1>
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 </header>
 
-
 <section id="home" class="hero">
-<h2>Your Dream Landscape Starts Here</h2>
+    <h2>Your Dream Landscape Starts Here</h2>
 </section>
-
 
 <section id="services" class="services-section">
-<h2>Our Services</h2>
-<div class="services">
-<div class="service-card">
-<h3>Lawn Care</h3>
-<p>Complete lawn maintenance and care packages.</p>
-</div>
-<div class="service-card">
-<h3>Garden Design</h3>
-<p>Custom garden designs tailored to your vision.</p>
-</div>
-<div class="service-card">
-<h3>Tree Trimming</h3>
-<p>Safe and professional trimming and removal.</p>
-</div>
-</div>
-</section>
+    <h2>Our Services</h2>
 
+    <div class="services">
+        <div class="service-card">
+            <h3>Lawn Care</h3>
+            <p>Complete lawn maintenance and care packages.</p>
+        </div>
+
+        <div class="service-card">
+            <h3>Garden Design</h3>
+            <p>Custom garden designs tailored to your vision.</p>
+        </div>
+
+        <div class="service-card">
+            <h3>Tree Trimming</h3>
+            <p>Safe and professional trimming and removal.</p>
+        </div>
+    </div>
+</section>
 
 <section id="about" class="about-section">
-<h2>About Us</h2>
-<p>At GreenScape Landscaping, we pride ourselves on delivering high-quality landscaping services with over 10 years of experience in the industry.</p>
+    <h2>About Us</h2>
+    <p>At GreenScape Landscaping, we deliver high-quality landscaping with over 10 years of experience.</p>
 </section>
-
 
 <section id="contact" class="contact-section">
-<h2>Contact Us</h2>
-<p>Email: youremail@domain.com</p>
-<p>Phone: (123) 456-7890</p>
+    <h2>Contact Us</h2>
+    <p>Email: youremail@domain.com</p>
+    <p>Phone: (123) 456-7890</p>
 </section>
 
-
 <footer>
-<p>&copy; 2025 GreenScape Landscaping. All rights reserved.</p>
+    <p>&copy; 2025 GreenScape Landscaping. All rights reserved.</p>
 </footer>
+
 </body>
 </html>
