--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <header>
         <nav class="navbar">
             <ul class="nav-links">
-                <li><a href="#">Home</a></li>
+                <li><a href="#home">Home</a></li>
                 <li><a href="#">Jobs</a></li>
                 <li><a href="#">Contact</a></li>
-                <li><a href="#">Info</a></li>
             </ul>
             <div class="logo">
                 <img src="logo.png" alt="GreenScape Logo">
@@ -22,9 +21,37 @@
     </header>
 
     <main>
-        <section class="hero">
-            <h1>Welcome to GreenScape Landscaping</h1>
-            <p>Your dream garden, our expert care.</p>
+        <section id="home" class="home-section">
+            <h2>Welcome to GreenScape Landscaping</h2>
+            <p>At GreenScape Landscaping, we turn your outdoor spaces into beautiful, thriving gardens and landscapes. From design to maintenance, our expert team is here to create your dream garden.</p>
+            <ul>
+                <li>Custom Garden Designs</li>
+                <li>Professional Lawn Care</li>
+                <li>Tree & Shrub Planting</li>
+                <li>Seasonal Maintenance Services</li>
+            </ul>
+            <p>Let’s make your garden the envy of the neighborhood!</p>
+        </section>
+
+        <section id="info" class="info-section">
+            <h2>About GreenScape Landscaping</h2>
+            <p>GreenScape Landscaping has been creating beautiful, sustainable gardens for over 10 years. Our mission is to bring nature closer to you and enhance your outdoor living experience.</p>
+            <h3>Why Choose Us?</h3>
+            <ul>
+                <li>Experienced and Certified Landscaping Professionals</li>
+                <li>Eco-Friendly Practices</li>
+                <li>Personalized Service Tailored to Your Needs</li>
+                <li>Competitive Pricing with High-Quality Results</li>
+            </ul>
+            <p>We believe a well-maintained garden is not just beautiful, but a space to relax, entertain, and connect with nature.</p>
+
+            <!-- New appealing bordered section -->
+            <div class="highlight-section">
+                <p>Whether you’re looking to make small updates or completely transform your garden, we’re here to help. With over [insert number] years of landscaping experience, we offer a full range of services including patios, paving, driveways, decking, planting, lighting, and ongoing maintenance.</p>
+                <p>Every project is carefully overseen by an experienced professional, ensuring that even the finest details are examined and perfected. We take the time to meet with every customer, discussing your vision and requirements in detail. During this process, we will also provide a tailored quote that suits your budget.</p>
+                <p>Based in Munster, we’ve completed extensive landscaping work across Kerry, Cork, and Limerick, working on both private gardens and public projects.</p>
+                <p>Get in touch today for a free, no-obligation quote and let’s bring your outdoor space to life.</p>
+            </div>
         </section>
     </main>
 </body>
