--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>GreenScape Landscaping</title>
     <link rel="stylesheet" href="style.css">
 
-    <!-- Fancy fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
+    <!-- Striking premium fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@600;700&family=Lora:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+
     <header>
         <nav class="navbar">
             <ul class="nav-links">
@@ -18,8 +19,10 @@
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">Info</a></li>
             </ul>
+
+            <!-- Updated logo path -->
             <div class="logo">
-                <img src="logo.png" alt="GreenScape Logo">
+                <img src="folder/img1.jpg" alt="GreenScape Logo">
             </div>
         </nav>
     </header>
@@ -37,5 +40,6 @@
             </div>
         </section>
     </main>
+
 </body>
 </html>
