--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>GreenScape Landscaping</title>
     <link rel="stylesheet" href="style.css">
 
-    <!-- Striking premium fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@600;700&family=Lora:wght@400;600&display=swap" rel="stylesheet">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@600;700&family=Lora:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -20,7 +20,6 @@
                 <li><a href="#">Info</a></li>
             </ul>
 
-            <!-- Updated logo path -->
             <div class="logo">
                 <img src="folder/img1.jpg" alt="GreenScape Logo">
             </div>
@@ -30,16 +29,12 @@
     <main>
         <section class="info-section">
             <div class="highlight-section">
-                <p>Whether you’re looking to make small updates or completely transform your garden, we’re here to help. With over [insert number] years of landscaping experience, we offer a full range of services including patios, paving, driveways, decking, planting, lighting, and ongoing maintenance.</p>
+                <p>Whether you’re looking to make small updates or completely transform your garden, we’re here to help. With over 25 years of landscaping experience, we offer a full range of services including patios, paving, driveways, decking, planting, lighting, and ongoing maintenance.</p>
 
-                <p>Every project is carefully overseen by an experienced professional, ensuring that even the finest details are examined and perfected. We take the time to meet with every customer, discussing your vision and requirements in detail. During this process, we will also provide a tailored quote that suits your budget.</p>
+                <p>Each project is discussed and reviewed on-site with both the employer and the property owners to confirm your vision and requirements in detail. During this stage, we also provide a tailored quote that aligns with your budget.</p>
 
                 <p>Based in Munster, we’ve completed extensive landscaping work across Kerry, Cork, and Limerick, working on both private gardens and public projects.</p>
 
-                <p>Get in touch today for a free, no-obligation quote and let’s bring your outdoor space to life.</p>
+                <p class="highlight-sentence">Cedar: Experience You Can Trust, Results You’ll Love.</p>
             </div>
         </section>
-    </main>
-
-</body>
-</html>
