--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
                 <li><a href="#">Info</a></li>
             </ul>
 
+            <!-- Logo with correct capitalization -->
             <div class="logo">
-                <img src="folder/img1.jpg" alt="GreenScape Logo">
+                <img src="folder/Img1.jpg" alt="GreenScape Logo">
             </div>
         </nav>
     </header>
@@ -38,3 +39,7 @@
                 <p class="highlight-sentence">Cedar: Experience You Can Trust, Results You’ll Love.</p>
             </div>
         </section>
+    </main>
+
+</body>
+</html>
