--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <div class="logo">
                 <a href="index.html">
-                    <img src="folder/Img1.jpg" alt="GreenScape Logo">
+                    <img src="folder/Img1.png" alt="GreenScape Logo">
                 </a>
             </div>
         </nav>
