--- a/index.html
+++ b/index.html
@@ -13,48 +13,44 @@
 </head>
 <body>
 
-    <header>
-        <nav class="navbar">
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="job.html">Jobs</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+<header>
+    <nav class="navbar">
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="job.html">Jobs</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
 
-            <div class="logo">
-                <a href="index.html">
-                    <img src="folder/Img1.png" alt="GreenScape Logo">
-                </a>
+        <div class="logo">
+            <a href="index.html">
+                <img src="folder/Img1.png" alt="GreenScape Logo">
+            </a>
+        </div>
+    </nav>
+</header>
+
+<main>
+    <section class="info-section">
+        <div class="container">
+
+            <!-- Existing Info Box -->
+            <div class="highlight-section info-box">
+                <p class="highlight-sentence">Cedar: Experience You Can Trust, Results You’ll Love.</p>
             </div>
-        </nav>
-    </header>
 
-    <main>
-        <section class="info-section">
-            <div class="highlight-section">
-                <p>
-                    Whether you’re looking to make small updates or completely transform your garden, we’re here to help.
-                    With over 25 years of landscaping experience, we offer a full range of services including patios,
-                    paving, driveways, decking, planting, lighting, and ongoing maintenance.
-                </p>
-
-                <p>
-                    Each project is discussed and reviewed on-site with both the employer and the property owners to confirm
-                    your vision and requirements in detail. During this stage, we also provide a tailored quote that aligns
-                    with your budget.
-                </p>
-
-                <p>
-                    Based in Munster, we’ve completed extensive landscaping work across Kerry, Cork, and Limerick,
-                    working on both private gardens and public projects.
-                </p>
-
-                <p class="highlight-sentence">
-                    Cedar: Experience You Can Trust, Results You’ll Love.
-                </p>
+            <!-- New Jobs Available Box -->
+            <div class="highlight-section jobs-box">
+                <h2>Jobs Available</h2>
+                <ul>
+                    <li>Landscaper</li>
+                    <li>Garden Designer</li>
+                    <li>Maintenance Crew</li>
+                </ul>
             </div>
-        </section>
-    </main>
+
+        </div>
+    </section>
+</main>
 
 </body>
 </html>
