--- a/index.html
+++ b/index.html
@@ -33,12 +33,18 @@
     <section class="info-section">
         <div class="container">
 
-            <!-- Existing Info Box -->
+            <!-- Original Info Box -->
             <div class="highlight-section info-box">
+                <p>Whether you’re looking to make small updates or completely transform your garden, we’re here to help. With over 25 years of landscaping experience, we offer a full range of services including patios, paving, driveways, decking, planting, lighting, and ongoing maintenance.</p>
+
+                <p>Each project is discussed and reviewed on-site with both the employer and the property owners to confirm your vision and requirements in detail. During this stage, we also provide a tailored quote that aligns with your budget.</p>
+
+                <p>Based in Munster, we’ve completed extensive landscaping work across Kerry, Cork, and Limerick, working on both private gardens and public projects.</p>
+
                 <p class="highlight-sentence">Cedar: Experience You Can Trust, Results You’ll Love.</p>
             </div>
 
-            <!-- New Jobs Available Box -->
+            <!-- Jobs Available Box -->
             <div class="highlight-section jobs-box">
                 <h2>Jobs Available</h2>
                 <ul>
