--- a/index.html
+++ b/index.html
@@ -44,13 +44,17 @@
                 <p class="highlight-sentence">Cedar: Experience You Can Trust, Results You’ll Love.</p>
             </div>
 
-            <!-- Jobs Available Box -->
-            <div class="highlight-section jobs-box">
-                <h2>Jobs Available</h2>
+            <!-- Services Box -->
+            <div class="highlight-section services-box">
+                <h2>Services Include</h2>
                 <ul>
-                    <li>Landscaper</li>
-                    <li>Garden Designer</li>
-                    <li>Maintenance Crew</li>
+                    <li>Patios</li>
+                    <li>Paving</li>
+                    <li>Driveways</li>
+                    <li>Decking</li>
+                    <li>Planting</li>
+                    <li>Lighting</li>
+                    <li>Ongoing Maintenance</li>
                 </ul>
             </div>
 
