--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
             <!-- Services Box -->
             <div class="highlight-section services-box">
-                <h2>Services Include</h2>
+                <h2 class="services-title">Services Include</h2>
                 <ul>
                     <li>Patios</li>
                     <li>Paving</li>
