--- a/index.html
+++ b/index.html
@@ -59,8 +59,56 @@
             </div>
 
         </div>
+
+        <!-- Reviews Box -->
+        <div class="reviews-box highlight-section">
+            <h2 class="reviews-title">Customer Reviews</h2>
+
+            <!-- Existing reviews -->
+            <div class="review">
+                <p>"Amazing service! Our garden has never looked better." <span>- Jane D.</span></p>
+            </div>
+            <div class="review">
+                <p>"Professional and reliable. Highly recommended!" <span>- Mark S.</span></p>
+            </div>
+            <div class="review">
+                <p>"Beautiful design and excellent attention to detail." <span>- Laura K.</span></p>
+            </div>
+
+            <!-- Review Form -->
+            <form class="review-form" id="reviewForm">
+                <h3>Submit Your Review</h3>
+                <input type="text" id="name" placeholder="Your Name" required>
+                <textarea id="review" placeholder="Your Review" rows="4" required></textarea>
+                <button type="submit">Submit Review</button>
+            </form>
+        </div>
+
     </section>
 </main>
+
+<!-- Optional JS for demo -->
+<script>
+    const form = document.getElementById('reviewForm');
+    const reviewsBox = document.querySelector('.reviews-box');
+
+    form.addEventListener('submit', function(e) {
+        e.preventDefault();
+        const name = document.getElementById('name').value;
+        const review = document.getElementById('review').value;
+
+        // Create a new review element
+        const newReview = document.createElement('div');
+        newReview.classList.add('review');
+        newReview.innerHTML = `<p>"${review}" <span>- ${name}</span></p>`;
+
+        // Add it to the reviews box
+        reviewsBox.insertBefore(newReview, form);
+
+        // Clear form
+        form.reset();
+    });
+</script>
 
 </body>
 </html>
